contact fix on mobile

--- a/components/Layout/Layout.module.css
+++ b/components/Layout/Layout.module.css
@@ -111,7 +111,7 @@
   padding: 20px 0;
 }
 
-@media(max-width: 767px) {
+@media(max-width: 768px) {
   .logo {
     height: 90px;
     width: 60px;
@@ -135,7 +135,7 @@
   }
 }
 
-@media(min-width: 768px) {
+@media(min-width: 769px) {
   .mobile_menu {
     display: none;
   }
